fix customer dashboard page

--- a/customer_order.html
+++ b/customer_order.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     
-    <title>Customer Dashboard | PrintOnto</title>
+    <title>Customer Order | PrintOnto</title>
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     
     <!-- Bootstrap CSS -->
@@ -120,98 +120,18 @@
 
     <section id="customer-dashboard-main">
     	<div class="container">
+    		<h2>"Name of Order as Created by User"</h1>
+    		<p>ORDER #512465135</p>
     		<div class="row">
-    			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-    				<div class="customer-order">
-    					<h2>"Name of Order as Created by User"</h2>
-    					<p>ORDER #512465135</p>
-    					<div class="row">
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    							<img src="assets/img/customer-order-1.png" >
-    						</div>
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    							<div class="progress-div">
-    								<div class="order-progress c30">    								
-    								</div>
-    								<p class="progress-percent">40% complted</p>
-    								<span>Reviewing Images</span>
-    							</div> 
-    						</div>
-    					</div>
-    					<div class="customer-order-menu">
-    						<a href="#">Update order</a>|
-    						<a href="#">Duplicate order</a>|
-    						<a href="#">Need help?</a>
-    					</div>
-    				</div>
-    				<div class="customer-order-social">
-    					Share on:
-    					<a href="#"><img src="assets/img/twitter.png"></a>
-    					<a href="#"><img src="assets/img/facebook1.png"></a>
-    					<a href="#"><img src="assets/img/google.png"></a>
-    				</div>
-    			</div>
-    			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-    				<div class="customer-order">
-    					<h2>"Name of Order as Created by User"</h2>
-    					<p>ORDER #512465136</p>
-    					<div class="row">
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    							<img src="assets/img/customer-order-2.png" >
-    						</div>
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    							<div class="progress-div">
-    								<div class="order-progress c80">    								
-    								</div>
-    								<p class="progress-percent">80% complted</p>
-    								<span>Order approved</span>
-    							</div> 
-    						</div>
-    					</div>
-    					<div class="customer-order-menu">
-    						<a href="#">Update order</a>|
-    						<a href="#">Duplicate order</a>|
-    						<a href="#">Need help?</a>
-    					</div>
-    				</div>
-    				<div class="customer-order-social">
-    					Share on:
-    					<a href="#"><img src="assets/img/twitter.png"></a>
-    					<a href="#"><img src="assets/img/facebook1.png"></a>
-    					<a href="#"><img src="assets/img/google.png"></a>
-    				</div>
-    			</div>
-    			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-    				<div class="customer-order">
-    					<h2>"Name of Order as Created by User"</h2>
-    					<p>ORDER #512465137</p>
-    					<div class="row">
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    							<img src="assets/img/customer-order-1.png" >
-    						</div>
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    							<div class="progress-div">
-    								<div class="order-progress c30">    								
-    								</div>
-    								<p class="progress-percent">40% complted</p>
-    								<span>Reviewing Images</span>
-    							</div> 
-    						</div>
-    					</div>
-    					<div class="customer-order-menu">
-    						<a href="#">Update order</a>|
-    						<a href="#">Duplicate order</a>|
-    						<a href="#">Need help?</a>
-    					</div>
-    				</div>
-    				<div class="customer-order-social">
-    					Share on:
-    					<a href="#"><img src="assets/img/twitter.png"></a>
-    					<a href="#"><img src="assets/img/facebook1.png"></a>
-    					<a href="#"><img src="assets/img/google.png"></a>
-    				</div>
-    			</div>
-    		</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+					<img src="assets/img/customer-order-1.png" width="100%">
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 order-detail">
+					<div class="order-progress c30">
+						<span>40%</span>   								
+					</div>
+				</div>
+			</div>
     	</div>
     </section>
 
