--- a/customer_dashboard.html
+++ b/customer_dashboard.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" >
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-dropdownhover.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/progress-circle.css">
     <link rel="stylesheet" type="text/css" href="assets/slider/flexslider.css">
     <link rel="stylesheet" type="text/css" href="assets/slider/test-slider.css">
 
@@ -126,13 +127,14 @@
     					<h2>"Name of Order as Created by User"</h2>
     					<p>ORDER #512465135</p>
     					<div class="row">
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    						<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
     							<img src="assets/img/customer-order-1.png" >
     						</div>
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    						<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
     							<div class="progress-div">
-    								<div class="order-progress c30">    								
-    								</div>
+    								<div class="progress-circle progress-30 ">
+                                        <span>30</span>            
+                                    </div>
     								<p class="progress-percent">40% complted</p>
     								<span>Reviewing Images</span>
     							</div> 
@@ -156,13 +158,14 @@
     					<h2>"Name of Order as Created by User"</h2>
     					<p>ORDER #512465136</p>
     					<div class="row">
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    						<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
     							<img src="assets/img/customer-order-2.png" >
     						</div>
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    						<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
     							<div class="progress-div">
-    								<div class="order-progress c80">    								
-    								</div>
+    								<div class="progress-circle progress-80 ">
+                                        <span>80</span>            
+                                    </div>
     								<p class="progress-percent">80% complted</p>
     								<span>Order approved</span>
     							</div> 
@@ -186,13 +189,14 @@
     					<h2>"Name of Order as Created by User"</h2>
     					<p>ORDER #512465137</p>
     					<div class="row">
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    						<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
     							<img src="assets/img/customer-order-1.png" >
     						</div>
-    						<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    						<div class="col-xs-12 col-sm-6 col-md-12 col-lg-6">
     							<div class="progress-div">
-    								<div class="order-progress c30">    								
-    								</div>
+    								<div class="progress-circle progress-30 ">
+                                        <span>30</span>            
+                                    </div>
     								<p class="progress-percent">40% complted</p>
     								<span>Reviewing Images</span>
     							</div> 
