--- a/single_product.html
+++ b/single_product.html
@@ -157,7 +157,7 @@
 	    		<h4 class="hidden-md-up">205 Total Prints</h4>
 	    	</div>
 	    	<hr>
-	    	<table class="hidden-sm-down">
+	    	<table class="hidden-sm-down gallery-table">
 	    		<tr>
     				<td class="wow bounceInLeft"><img src="assets/img/gallery-14.png"><div class="mask">Image from Pinterest</div></td>
     				<td class="wow bounceInLeft"><img src="assets/img/gallery-13.png"><div class="mask">Image from Pinterest</div></td>
@@ -184,7 +184,7 @@
     				<td class="wow bounceInRight"><img src="assets/img/gallery-10.png"><div class="mask">Image from Pinterest</div></td>
     			</tr>
 	    	</table>
-	    	<table class="hidden-md-up">
+	    	<table class="hidden-md-up gallery-table">
 		        <tr>
 		          <td class="wow bounceInLeft"><img src="assets/img/gallery-14.png"><div class="mask">Image from Pinterest</div></td>
 		          <td class="wow bounceInRight" rowspan="2"><img src="assets/img/gallery-18.png"><div class="mask">Image from Pinterest</div></td>
