--- a/features.html
+++ b/features.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     
-    <title>Home | PrintOnto</title>
+    <title>Lenox | Features</title>
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     
     <!-- Bootstrap CSS -->
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" >
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" >
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/hover-min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/features.css" >
 
   </head>
@@ -43,7 +44,7 @@
     </section>
 
     <section id="features3">
-        <img src="assets/img/features/logomark.svg" width="500" class="wow fadeInUp mark-img">
+        <img src="assets/img/features/letterL.svg" class="wow fadeInUp mark-img">
         <img src="assets/img/features/features/features-3.png" class="img-responsive wow fadeIn">
     </section>
 
@@ -57,6 +58,7 @@
                     <div class="text-div  wow fadeInUp">
                         <h5>Service</h5>
                         <p>Our commitment to service means there is always someone ready to tend to your needs. The management staff is available with 24-hour emergency maintenance service.</p>
+                        <img src="assets/img/features/letterT.svg" class="mark-img">
                     </div> 
                 </div>
             </div>            
@@ -89,6 +91,7 @@
                     <div class="text-div  wow fadeInUp">
                         <h5>Neiborhood</h5>
                         <p>The six Lenox Terrace buildings are connected by beautifully landscaped, private parks. Whether you’re looking for a quiet place to read a book or go for a jog, our parks are the perfect place to enjoy nature.</p>
+                        <img src="assets/img/features/letterL.svg" class="mark-img">
                     </div> 
                 </div>
             </div>            
@@ -102,24 +105,47 @@
                     <div class="text-div  wow fadeInUp">
                         <h5>Accessible Parking</h5>
                         <p>Never worry about parking with our easily accessible on-site parking available to all residents.</p>
+                        <img src="assets/img/features/letterT.svg" class="mark-img">
                     </div>                    
                 </div>
                 <div class="col-md-6">
                     <img src="assets/img/features/features/features-7.png" class="img-responsive wow fadeInRight side-img">
                 </div>
             </div>
-            <div class="row">
+            <div class="row services">
                 <div class="col-md-4">
-                    <p>Accessible Parking</p>
+                    <h5 class="text-underline wow fadeInLeft">Newly Renovated</h5>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 wow fadeInUp">
                     <p>Lenox Terrace apartments are newly renovated and offer thoughtfully designed, spacious living with available balcony units.</p>
                 </div>
                 <div class="col-md-4">
-                    <p>Exquisitely finished with hardwood floors and custom kitchens, each apartment is complete  with high-end appliances and modern touches . Relax in comfort with personal climate control in each unit. State of the art laundry facilities are conveniently located inside each building.
-                    </p>
+                    <h5 class="wow fadeInRight">Exquisitely finished with hardwood floors and custom kitchens, each apartment is complete  with high-end appliances and modern touches . Relax in comfort with personal climate control in each unit. State of the art laundry facilities are conveniently located inside each building.
+                    </h5>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="features8">
+        <div>
+            <img src="assets/img/features/features/features-8.png" class="img-responsive wow fadeInUp">
+        </div>        
+    </section>
+
+    <section id="features9">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="assets/img/features/features/features-9.png" class="img-responsive wow fadeInLeft side-img">
+                </div>
+                <div class="col-md-6">
+                    <div class="text-div  wow fadeInUp">
+                        <h5>Pet Friendly</h5>
+                        <p>Pets are always welcome at Lenox Terrace.</p>
+                    </div> 
+                </div>
+            </div>            
         </div>
     </section>
 
