complete mobile version design of features page...

--- a/features.html
+++ b/features.html
@@ -22,9 +22,14 @@
 
   </head>
   <body>
-  
+    <section class="hidden-lg hidden-md" id="features-title">
+        <div class="container-fluid">
+            <h1>Features</h1>
+        </div>        
+    </section>
+
     <section id='features1' class="parallax">
-        <h1>More Than Just Living</h1>
+        <h1 class="hidden-xs hidden-sm">More Than Just Living</h1>
     </section>
 
     <section id='features2'>
@@ -51,7 +56,7 @@
     <section id='features4'>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 hidden-xs hidden-sm">
                     <img src="assets/img/features/features/features-4.png" class="img-responsive wow fadeInLeft side-img">
                 </div>
                 <div class="col-md-6">
@@ -60,6 +65,9 @@
                         <p>Our commitment to service means there is always someone ready to tend to your needs. The management staff is available with 24-hour emergency maintenance service.</p>
                         <img src="assets/img/features/letterT.svg" class="mark-img">
                     </div> 
+                </div>
+                <div class="col-md-6 hidden-md hidden-lg">
+                    <img src="assets/img/features/features/features-4.png" class="img-responsive wow fadeInLeft side-img">
                 </div>
             </div>            
         </div>
@@ -84,8 +92,8 @@
     <section id="features6">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
-                    <img src="assets/img/features/features/features-4.png" class="img-responsive wow fadeInLeft side-img">
+                <div class="col-md-6 hidden-xs hidden-sm">
+                    <img src="assets/img/features/features/features-6.png" class="img-responsive wow fadeInLeft side-img">
                 </div>
                 <div class="col-md-6">
                     <div class="text-div  wow fadeInUp">
@@ -93,6 +101,9 @@
                         <p>The six Lenox Terrace buildings are connected by beautifully landscaped, private parks. Whether you’re looking for a quiet place to read a book or go for a jog, our parks are the perfect place to enjoy nature.</p>
                         <img src="assets/img/features/letterL.svg" class="mark-img">
                     </div> 
+                </div>
+                <div class="col-md-6 hidden-md hidden-lg">
+                    <img src="assets/img/features/features/features-6.png" class="img-responsive wow fadeInLeft side-img">
                 </div>
             </div>            
         </div>
@@ -119,6 +130,9 @@
                 <div class="col-md-4 wow fadeInUp">
                     <p>Lenox Terrace apartments are newly renovated and offer thoughtfully designed, spacious living with available balcony units.</p>
                 </div>
+                <div class="col-md-4 hidden-lg hidden-md">
+                    <img src="assets/img/features/features/features-8.png" class="img-responsive wow fadeInUp">
+                </div>
                 <div class="col-md-4">
                     <h5 class="wow fadeInRight">Exquisitely finished with hardwood floors and custom kitchens, each apartment is complete  with high-end appliances and modern touches . Relax in comfort with personal climate control in each unit. State of the art laundry facilities are conveniently located inside each building.
                     </h5>
@@ -127,16 +141,16 @@
         </div>
     </section>
 
-    <section id="features8">
-        <div>
-            <img src="assets/img/features/features/features-8.png" class="img-responsive wow fadeInUp">
+    <section id="features8 hidden-sm hidden-xs">
+        <div class="container-fluid">
+            <img src="assets/img/features/features/features-8.png" class="img-responsive wow fadeInUp hidden-sm hidden-xs">
         </div>        
     </section>
 
     <section id="features9">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 hidden-xs hidden-sm">
                     <img src="assets/img/features/features/features-9.png" class="img-responsive wow fadeInLeft side-img">
                 </div>
                 <div class="col-md-6">
@@ -144,6 +158,9 @@
                         <h5>Pet Friendly</h5>
                         <p>Pets are always welcome at Lenox Terrace.</p>
                     </div> 
+                </div>
+                <div class="col-md-6 hidden-md hidden-lg">
+                    <img src="assets/img/features/features/features-9.png" class="img-responsive wow fadeInLeft side-img">
                 </div>
             </div>            
         </div>
