update features page...

--- a/features.html
+++ b/features.html
@@ -141,10 +141,8 @@
         </div>
     </section>
 
-    <section id="features8 hidden-sm hidden-xs">
-        <div class="container-fluid">
-            <img src="assets/img/features/features/features-8.png" class="img-responsive wow fadeInUp hidden-sm hidden-xs">
-        </div>        
+    <section id="features8" class="hidden-sm hidden-xs">
+        <img src="assets/img/features/features/features-8.png" class="img-responsive wow fadeInUp hidden-sm hidden-xs">
     </section>
 
     <section id="features9">
